tests/spec/compile-fail/092_assign_over_active_access.zn
// category: compile-fail
// profile: freestanding
// purpose: assignment cannot overwrite a value while a dependent access is live

module tests.fail.assignOverActiveAccess;

import core.alloc.GlobalAllocator;

fn useSlice(bytes: ArraySlice<U8>) -> USize {
    return bytes.len;
}

fn bad(mut allocator: GlobalAllocator) -> USize {
    var bytes = Vector<U8>.withCapacityIn(4, mut allocator);
    mut bytes.push(1);

    val view = bytes.asSlice();
    bytes = Vector<U8>.withCapacityIn(8, mut allocator); // expected-error: cannot overwrite value while a dependent access is live
    return useSlice(view);
}
